[package]
name = "h_vslam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features=["full"]}
opencv = "0.68"
plotters = "0.3.3"
plotters-piston = "*"
piston_window = "*"
systemstat = "*"
eframe = "*"
egui_extras = {features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }