[package]
name = "h_vslam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features=["full"]}
opencv = "0.68"
systemstat = "*"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4.0"
env_logger = "0.9.0"
yakf = "0.1.12"
csv = "1.2.2"
anyhow = "1.0.71"
nalgebra = "0.31"
approx = "0.5.1"
r2r = "0.7.5"
futures = "0.3.25"
ros_pointcloud2 = { version = "0.3.0", features = ["r2r_msg"]}
g2o = {path = "../g2o-rs"}

[[bin]]
name = "h_vslam"
path = "src/main.rs"
